--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     
     async function menuju(){pesanwhatsapp = "Makasii udah ngucapin " + nama + " ultah ><";await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?6282273112644=&text=" + pesanwhatsapp;}
 </script>
-<script src="https://feeldreams.github.io/heihbd/script.js"></script>
+<script src="instagram.com/xruldroidx"></script>
 <!-- Sampai Sini -->
 </body>
   </html>
